--- a/src/style/App.css
+++ b/src/style/App.css
@@ -11,6 +11,7 @@ APP
 .main-container {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 /*
@@ -26,28 +27,31 @@ BACKGROUND VIDEO
   z-index: -100;
 }
 
-.content {
-  border-radius: 200px;
-  position: fixed;
-  top: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  padding: 7px;
+@media (min-width: 200px) {
+  .content img {
+    width: 50%;
+    cursor: pointer;
+    position: relative;
+    bottom: 15px;
+  }
+  .content {
+    border-radius: 200px;
+    position: absolute;
+    color: #f1f1f1;
+    padding: 7px;
+  }
 }
 
-#myBtn {
-  border-radius: 200px;
-  font-size: 18px;
-  padding: 2px;
-  border: none;
-  background: #000;
-  color: #fff;
-  cursor: pointer;
+@media (min-width: 568px) {
+  .content img {
+    width: 80%;
+  }
 }
 
-#myBtn:hover {
-  background: #ddd;
-  color: black;
+@media (min-width: 1000px) {
+  .content img {
+    width: 80%;
+  }
 }
 
 /*
@@ -63,6 +67,14 @@ BACKGROUND VIDEO
     width: 100%;
     height: 100%;
   }
+  .flecha {
+    display: none;
+  }
+  .dates-desk {
+    background-image: url('../images/deskbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .container-tourDates {
     margin: 0 auto;
     display: flex;
@@ -72,68 +84,109 @@ BACKGROUND VIDEO
     text-align: center;
   }
   .tour-title-desk {
-    width: 55%;
+    width: 100%;
+    top: -5px;
+    position: relative;
   }
   .afro {
+    width: 80%;
+    left: 7px;
     position: relative;
-    bottom: 36px;
-    width: 45%;
+    bottom: 100px;
   }
-  .right-side {
+  .right-side-desk {
+    display: none;
+  }
+  .right-side-mob img {
+    width: 60%;
+    margin-bottom: 20px;
+  }
+  .right-side-mob {
+    position: relative;
+    bottom: 60px;
     text-align: center;
   }
   .date {
-    width: 60%;
+    width: 98%;
   }
 }
 
-@media (min-width: 560px) {
-  .BackGround-img {
-    height: 120%;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+@media (min-width: 568px) {
+  .dates-desk {
+    height: 827px;
   }
+  .flecha {
+    display: flex;
+    position: absolute;
+    bottom: -40px;
+    left: 42%;
+    width: 15%;
+    cursor: pointer;
+  }
+  .flecha:hover {
+    width: 16%
+  }
+  .flecha-cont {
+    position: relative;
+    display: flex;
+    justify-content: center;
+  }
+  .flecha-cont a {}
   .container-tourDates {
     flex-direction: row;
-    justify-content: center
+    justify-content: space-evenly;
+    position: relative;
+    top: 85px;
+  }
+  .right-side-mob {
+    display: none;
   }
   .left-side {
     flex-direction: column;
     display: flex;
   }
   .tour-title-desk {
-    width: 68%;
+    width: 100%;
     align-self: center;
   }
   .afro {
-    width: 85%;
+    bottom: 92px;
     align-self: center;
   }
   .date {
     position: relative;
-    top: 50px;
-    width: 85%;
+    width: 100%;
+    top: 64px;
+    margin-bottom: 22px;
+  }
+  .right-side-desk {
+    text-align: center;
+    display: block;
+    position: relative;
+    left: -26px;
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1180px) {
   .BackGround-img {
     height: 177%;
   }
   .container-tourDates {
     flex-direction: row;
-    justify-content: center
+    top: 0;
   }
-  .left-side {}
+  .left-side {
+    position: relative;
+    left: -42px;
+  }
   .tour-title-desk {
-    width: 100%;
+    width: 121%;
   }
   .afro {
     width: 100%;
   }
   .date {
-    top: 80px;
-    width: 100%;
+    width: 145%;
+    margin: 10px;
   }
 }
