--- a/src/style/Side.css
+++ b/src/style/Side.css
@@ -1,30 +1,3 @@
-a {
-  text-decoration: none;
-}
-
-@media (min-width: 200px) {
-  .redes {
-    display: none;
-  }
-}
-
-@media (min-width: 750px) {
-  .social {
-    display: flex;
-    position: absolute;
-    align-self: flex-end;
-  }
-  .redes {
-    position: relative;
-    margin-top: 80px;
-    display: flex;
-    flex-direction: column;
-  }
-  .redes img {
-    width: 48%;
-  }
-}
-
 /*
 ======================
 HAMBURGUER
@@ -33,26 +6,39 @@ HAMBURGUER
 
 /* Position and sizing of burger button */
 
+a {
+  color: white;
+}
+
+a:visited {
+  color: inherit;
+}
+
 @media (min-width: 200px) {
   .bm-burger-button {
-    position: fixed;
+    position: absolute;
     width: 36px;
     height: 30px;
     right: 10px;
-    top: 20px;
   }
 }
 
-@media (min-width: 750px) {
+@media (min-width: 568px) {
   .bm-burger-button {
-    right: 105px;
+    width: 50px;
+    height: 40px;
+    margin-top: 15px;
   }
+}
+
+@media (min-width: 1000px) {
+  .bm-burger-button {}
 }
 
 /* Color/shape of burger icon bars */
 
 .bm-burger-bars {
-  background: #fefefe;
+  background: rgb(6, 248, 255);
 }
 
 /* Position and sizing of clickable cross button */
@@ -72,9 +58,13 @@ HAMBURGUER
 
 .bm-menu {
   background: rgba(106, 0, 111, .45);
-  padding: 2em 2.5em 0;
+  padding: 2em 10em 1em 0;
   line-height: 2;
   font-size: 1em;
+}
+
+#tour-dates {
+  width: 500px;
 }
 
 /* Morph shape necessary with bubble or elastic */
@@ -85,13 +75,19 @@ HAMBURGUER
 
 /* Wrapper for item list */
 
+@font-face {
+  font-family: 'Strasua';
+  src: local('strasua'), url(../utils/fonts/Strasua.ttf) format('truetype');
+}
+
 .bm-item-list {
-  color: #fefefe;
+  color: rgb(0, 247, 255);
   padding: 0.8em;
+  font-family: strasua;
 }
 
 /* Styling of overlay */
 
 .bm-overlay {
-  background: white;
+  background: black;
 }
